testdata/corset/valid/module_02.lisp
(defcolumns (X :i16))
(module test)
(defcolumns (X :i16))
(defconstraint heartbeat () (== 0 X))
